version/0.10/_sources/api/ansys/geometry/core/_grpc/_services/v1/admin/GRPCAdminServiceV1.rst.txt






:class:`GRPCAdminServiceV1`
===========================


.. py:class:: ansys.geometry.core._grpc._services.v1.admin.GRPCAdminServiceV1(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.admin.GRPCAdminService`


   
   Admin service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   admin service. It is specifically designed for the v1 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!




.. py:currentmodule:: GRPCAdminServiceV1

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_backend`
            - Get server information.
          * - :py:attr:`~get_logs`
            - Get server logs.





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v1.admin import GRPCAdminServiceV1


Attribute detail
----------------

.. py:attribute:: stub



Method detail
-------------

.. py:method:: get_backend(**kwargs) -> dict
   :abstractmethod:


   
   Get server information.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_logs(**kwargs) -> dict
   :abstractmethod:


   
   Get server logs.
















   ..
       !! processed by numpydoc !!




